--- a/ReactNativeMobile/spotlight-app/package.json
+++ b/ReactNativeMobile/spotlight-app/package.json
@@ -44,7 +44,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "svix": "^1.66.0",
-    "expo-navigation-bar": "~4.2.4"
+    "expo-navigation-bar": "~4.2.4",
+    "expo-document-picker": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,6 +53,13 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
